Bug 304326 - ambiguous keys
Summary: ambiguous keys
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-31 11:57 UTC by icegood
Modified: 2012-10-25 16:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description icegood 2012-07-31 11:57:39 UTC
Use to set font enlarge/shrink ctrl+ +/- respectivetly. But they also applied to folder 
open/close. So i deleted them for folders but they reappear and next error still happens.

The key sequence 'Ctrl++' is ambiguous. Use 'Configure Shortcuts'
from the 'Settings' menu to solve the ambiguity.
No action will be triggered.

Reproducible: Always

Steps to Reproduce:
1. Remove ctrl+ +/- bindings 
2. Reset bindings to fonts only
3. Open more than one file in different folders (so folder binding reappear)
4. Check how ctrl++ works
Actual Results:  

The key sequence 'Ctrl++' is ambiguous. Use 'Configure Shortcuts'
from the 'Settings' menu to solve the ambiguity.
No action will be triggered.

Expected Results:  
No ambiguity

Kate
Version 3.8.4
Using KDE Development Platform 4.8.4 (4.8.4
Comment 1 Dominik Haumann 2012-10-25 16:20:15 UTC
Git commit c0aad5f1e078fb9b0a2bf0295dc84436515e13e8 by Dominik Haumann.
Committed on 25/10/2012 at 18:20.
Pushed by dhaumann into branch 'master'.

remove ambiguous shortcuts

Ctrl+ and ctrl- are already assigned to zooming. Since zooming is more commonly
used, the shortcuts for the code folding are removed. The shortcuts themselves
were loaded/saved correctly, so bug 304326 should be ok.

M  +0    -2    part/view/kateview.cpp

http://commits.kde.org/kate/c0aad5f1e078fb9b0a2bf0295dc84436515e13e8