remove ambiguous shortcuts

Ctrl+ and ctrl- are already assigned to zooming. Since zooming is more commonly
used, the shortcuts for the code folding are removed. The shortcuts themselves
were loaded/saved correctly, so bug 304326 should be ok.

BUG: 304326